@@ -1,8 +1,10 @@
 aptsh (0.0.6) unstable; urgency=low
 
   * Fixed *.deb completion for dpkg --install command.
+  * Fixed bug with --execute and commands that require initialization of
+    libapt-pkg.
 
- -- Marcin Wrochniak <wrochniak@gmail.com>  Tue,  6 Dec 2005 10:12:14 +0100
+ -- Marcin Wrochniak <wrochniak@gmail.com>  Wed,  7 Dec 2005 11:56:33 +0100
 
 aptsh (0.0.5) unstable; urgency=low
 
